@@ -10,19 +10,20 @@ import com.drujba.autobackend.db.repositories.car.ImageRepository;
 import com.drujba.autobackend.db.repositories.translation.CarTranslationRepository;
 import com.drujba.autobackend.exceptions.car.CarDoesNotExistException;
 import com.drujba.autobackend.exceptions.car.CarModelDoesNotExistException;
-import com.drujba.autobackend.exceptions.car.CarTranslationDoesNotExistException;
 import com.drujba.autobackend.models.dto.car.*;
 import com.drujba.autobackend.models.enums.Locale;
 import com.drujba.autobackend.services.car.ICarService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.UUID;
+import java.math.BigDecimal;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -35,16 +36,22 @@ public class CarService implements ICarService {
     private final ImageRepository imageRepository;
 
     @Override
+    @Transactional
+    @CacheEvict(value = "cars", allEntries = true)
     public UUID saveCar(CarCreationDto carCreationDto) {
         CarModelDto carModelDto = carCreationDto.getCarModelDto();
-        CarModel carModel = carModelRepository.findByBrandAndModelAndGeneration(carModelDto.getBrand(),
-                        carModelDto.getModel(), carModelDto.getGeneration())
+        CarModel carModel = carModelRepository.findByBrandAndModelAndGeneration(
+                        carModelDto.getBrand(),
+                        carModelDto.getModel(),
+                        carModelDto.getGeneration())
                 .orElseThrow(() -> new CarModelDoesNotExistException(carCreationDto.getCarModelDto().getModel()));
         Car car = new Car(carCreationDto, carModel);
         return carRepository.save(car).getId();
     }
 
     @Override
+    @Transactional
+    @CacheEvict(value = "cars", allEntries = true)
     public void deleteCar(UUID id) {
         if (carRepository.existsById(id)) {
             carRepository.deleteById(id);
@@ -52,6 +59,8 @@ public class CarService implements ICarService {
     }
 
     @Override
+    @Transactional
+    @CacheEvict(value = "cars", allEntries = true)
     public void updateCar(UUID id, CarUpdateDto carUpdateDto) {
         Car car = carRepository.findById(id)
                 .orElseThrow(() -> new CarDoesNotExistException(id.toString()));
@@ -100,165 +109,82 @@ public class CarService implements ICarService {
     }
 
     @Override
+    @Cacheable(value = "cars", key = "#id + '-' + #locale")
     public CarResponseDto getCar(UUID id, Locale locale) {
         Car car = carRepository.findById(id)
                 .orElseThrow(() -> new CarDoesNotExistException(id.toString()));
 
         CarTranslation translation = carTranslationRepository.findByCarAndLocale(car, locale)
                 .orElseGet(() -> carTranslationRepository.findByCarAndLocale(car, Locale.EU).orElse(null));
-        List<String> images = imageRepository.findByCar(car).stream().map(Image::getFilePath).toList();
+
+        List<String> images = imageRepository.findByCar(car).stream()
+                .map(Image::getFilePath)
+                .collect(Collectors.toList());
+
         if (translation != null) {
             return new CarResponseDto(car, translation, images);
         }
         return new CarResponseDto(car, images);
     }
 
-//    @Override
-//    public List<CarDto> getAllCars() {
-//        return carRepository.findAll().stream().map(CarDto::new).collect(Collectors.toList());
-//    }
-
     @Override
+    @Transactional
+    @CacheEvict(value = "cars", allEntries = true)
     public void hideCar(UUID id) {
-        Car car = carRepository.findById(id).orElseThrow(() -> new CarDoesNotExistException(id.toString()));
+        Car car = carRepository.findById(id)
+                .orElseThrow(() -> new CarDoesNotExistException(id.toString()));
         car.setAvailable(false);
         carRepository.save(car);
     }
 
     @Override
+    @Cacheable(value = "cars", key = "{#pageable.pageNumber, #pageable.pageSize, #locale, #filterDto.hashCode()}")
+    @Transactional(readOnly = true)
     public Page<CarResponseDto> getFilteredCars(CarFilterDto filterDto, Pageable pageable, Locale locale) {
-        Specification<Car> spec = Specification.where(null);
+        Specification<Car> spec = buildCarSpecification(filterDto);
 
-        // Фильтр по пробегу
-        if (filterDto.getMileageFrom() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.greaterThanOrEqualTo(root.get("mileage"), filterDto.getMileageFrom()));
-        }
-        if (filterDto.getMileageTo() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.lessThanOrEqualTo(root.get("mileage"), filterDto.getMileageTo()));
-        }
-
-        // Фильтр по городу
-        if (filterDto.getCity() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("city"), filterDto.getCity()));
-        }
-
-        // Фильтр по бренду
-        if (filterDto.getBrand() != null & !Objects.equals(filterDto.getBrand(), "")) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("carModel").get("brand"), filterDto.getBrand()));
-        }
-
-        // Фильтр по модели
-        if (filterDto.getModel() != null & !Objects.equals(filterDto.getModel(), "")) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("carModel").get("model"), filterDto.getModel()));
-        }
-
-        // Фильтр по поколению
-        if (filterDto.getGeneration() != null & !Objects.equals(filterDto.getGeneration(), "")) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("carModel").get("generation"), filterDto.getGeneration()));
-        }
-
-        // Фильтр по цене
-        if (filterDto.getPriceFrom() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.greaterThanOrEqualTo(root.get("price"), filterDto.getPriceFrom()));
-        }
-        if (filterDto.getPriceTo() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.lessThanOrEqualTo(root.get("price"), filterDto.getPriceTo()));
-        }
-
-        // Фильтр по количеству владельцев
-        if (filterDto.getOwnersCountFrom() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.greaterThanOrEqualTo(root.get("ownersCount"), filterDto.getOwnersCountFrom()));
-        }
-        if (filterDto.getOwnersCountTo() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.lessThanOrEqualTo(root.get("ownersCount"), filterDto.getOwnersCountTo()));
-        }
-
-        // Фильтр по типу трансмиссии
-        if (filterDto.getTransmission() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("transmissionType"), filterDto.getTransmission()));
-        }
-
-        // Фильтр по типу кузова
-        if (filterDto.getBodyType() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("bodyType"), filterDto.getBodyType()));
-        }
-
-        // Фильтр по году выпуска
-        if (filterDto.getYearFrom() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.greaterThanOrEqualTo(root.get("year"), filterDto.getYearFrom()));
-        }
-        if (filterDto.getYearTo() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.lessThanOrEqualTo(root.get("year"), filterDto.getYearTo()));
-        }
-
-        // Фильтр по мощности двигателя
-        if (filterDto.getEnginePowerFrom() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.greaterThanOrEqualTo(root.get("enginePower"), filterDto.getEnginePowerFrom()));
-        }
-        if (filterDto.getEnginePowerTo() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.lessThanOrEqualTo(root.get("enginePower"), filterDto.getEnginePowerTo()));
-        }
-
-        // Фильтр по типу двигателя
-        if (filterDto.getEngineType() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("engineType"), filterDto.getEngineType()));
-        }
-
-        // Фильтр по приводу
-        if (filterDto.getDrive() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("driveType"), filterDto.getDrive()));
-        }
-
-        // Фильтр по объему двигателя
-        if (filterDto.getEngineCapacityFrom() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.greaterThanOrEqualTo(root.get("engineCapacity"), filterDto.getEngineCapacityFrom()));
-        }
-        if (filterDto.getEngineCapacityTo() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.lessThanOrEqualTo(root.get("engineCapacity"), filterDto.getEngineCapacityTo()));
-        }
-
-        // Фильтр по положению руля
-        if (filterDto.getSteeringPosition() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.equal(root.get("steeringPosition"), filterDto.getSteeringPosition()));
-        }
-
-        // Фильтр по количеству мест
-        if (filterDto.getSeatsFrom() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.greaterThanOrEqualTo(root.get("seatsCount"), filterDto.getSeatsFrom()));
-        }
-        if (filterDto.getSeatsTo() != null) {
-            spec = spec.and((root, query, criteriaBuilder)
-                    -> criteriaBuilder.lessThanOrEqualTo(root.get("seatsCount"), filterDto.getSeatsTo()));
-        }
-
+        // Fetch cars
         Page<Car> cars = carRepository.findAll(spec, pageable);
 
+        if (cars.isEmpty()) {
+            return Page.empty(pageable);
+        }
+
+        // Get all car IDs to fetch translations and images in batch
+        List<UUID> carIds = cars.getContent().stream()
+                .map(Car::getId)
+                .collect(Collectors.toList());
+
+        // Batch fetch translations for this locale and EU (fallback)
+        Map<UUID, CarTranslation> translations = new HashMap<>();
+
+        // First try with the requested locale
+        List<CarTranslation> primaryTranslations = carTranslationRepository.findByCarIdInAndLocale(carIds, locale);
+        primaryTranslations.forEach(translation ->
+                translations.put(translation.getCar().getId(), translation)
+        );
+
+        // For cars without translation in requested locale, try EU locale
+        List<UUID> missingTranslationCarIds = carIds.stream()
+                .filter(id -> !translations.containsKey(id))
+                .collect(Collectors.toList());
+
+        if (!missingTranslationCarIds.isEmpty()) {
+            List<CarTranslation> fallbackTranslations =
+                    carTranslationRepository.findByCarIdInAndLocale(missingTranslationCarIds, Locale.EU);
+            fallbackTranslations.forEach(translation ->
+                    translations.put(translation.getCar().getId(), translation)
+            );
+        }
+
+        // Batch fetch images
+        Map<UUID, List<String>> imagesByCarId = fetchImagesByCarIds(carIds);
+
+        // Map entities to DTOs
         return cars.map(car -> {
-            CarTranslation translation = carTranslationRepository.findByCarAndLocale(car, locale)
-                    .orElseGet(() -> carTranslationRepository.findByCarAndLocale(car, Locale.EU).orElse(null));
-            List<String> images = imageRepository.findByCar(car).stream().map(Image::getFilePath).toList();
+            CarTranslation translation = translations.get(car.getId());
+            List<String> images = imagesByCarId.getOrDefault(car.getId(), Collections.emptyList());
+
             if (translation != null) {
                 return new CarResponseDto(car, translation, images);
             } else {
@@ -267,4 +193,142 @@ public class CarService implements ICarService {
         });
     }
 
+    private Map<UUID, List<String>> fetchImagesByCarIds(List<UUID> carIds) {
+        return imageRepository.findByCarIdIn(carIds)
+                .stream()
+                .collect(Collectors.groupingBy(
+                        image -> image.getCar().getId(),
+                        Collectors.mapping(Image::getFilePath, Collectors.toList())
+                ));
+    }
+
+    private Specification<Car> buildCarSpecification(CarFilterDto filterDto) {
+        Specification<Car> spec = Specification.where(null);
+
+        // Filter by availability - Default filter to only show available cars
+        spec = spec.and((root, query, criteriaBuilder) ->
+                criteriaBuilder.equal(root.get("isAvailable"), true));
+
+        // Mileage filters
+        if (filterDto.getMileageFrom() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.greaterThanOrEqualTo(root.get("mileage"), filterDto.getMileageFrom()));
+        }
+        if (filterDto.getMileageTo() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.lessThanOrEqualTo(root.get("mileage"), filterDto.getMileageTo()));
+        }
+
+        // Brand filter
+        if (filterDto.getBrand() != null && !filterDto.getBrand().isEmpty()) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("carModel").get("brand"), filterDto.getBrand()));
+        }
+
+        // Model filter
+        if (filterDto.getModel() != null && !filterDto.getModel().isEmpty()) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("carModel").get("model"), filterDto.getModel()));
+        }
+
+        // Generation filter
+        if (filterDto.getGeneration() != null && !filterDto.getGeneration().isEmpty()) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("carModel").get("generation"), filterDto.getGeneration()));
+        }
+
+        // Price filters
+        if (filterDto.getPriceFrom() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.greaterThanOrEqualTo(root.get("price"), filterDto.getPriceFrom()));
+        }
+        if (filterDto.getPriceTo() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.lessThanOrEqualTo(root.get("price"), filterDto.getPriceTo()));
+        }
+
+        // Owners count filters
+        if (filterDto.getOwnersCountFrom() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.greaterThanOrEqualTo(root.get("ownersCount"), filterDto.getOwnersCountFrom()));
+        }
+        if (filterDto.getOwnersCountTo() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.lessThanOrEqualTo(root.get("ownersCount"), filterDto.getOwnersCountTo()));
+        }
+
+        // Transmission type filter
+        if (filterDto.getTransmission() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("transmissionType"), filterDto.getTransmission()));
+        }
+
+        // Body type filter
+        if (filterDto.getBodyType() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("bodyType"), filterDto.getBodyType()));
+        }
+
+        // Year filters
+        if (filterDto.getYearFrom() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.greaterThanOrEqualTo(root.get("year"), filterDto.getYearFrom()));
+        }
+        if (filterDto.getYearTo() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.lessThanOrEqualTo(root.get("year"), filterDto.getYearTo()));
+        }
+
+        // Engine power filters
+        if (filterDto.getEnginePowerFrom() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.greaterThanOrEqualTo(root.get("enginePower"), filterDto.getEnginePowerFrom()));
+        }
+        if (filterDto.getEnginePowerTo() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.lessThanOrEqualTo(root.get("enginePower"), filterDto.getEnginePowerTo()));
+        }
+
+        // Engine type filter
+        if (filterDto.getEngineType() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("engineType"), filterDto.getEngineType()));
+        }
+
+        // Drive type filter
+        if (filterDto.getDrive() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("driveType"), filterDto.getDrive()));
+        }
+
+        // Engine capacity filters
+        if (filterDto.getEngineCapacityFrom() != null) {
+            BigDecimal value = filterDto.getEngineCapacityFrom();
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.greaterThanOrEqualTo(root.get("engineCapacity"), value.doubleValue()));
+        }
+        if (filterDto.getEngineCapacityTo() != null) {
+            BigDecimal value = filterDto.getEngineCapacityTo();
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.lessThanOrEqualTo(root.get("engineCapacity"), value.doubleValue()));
+        }
+
+        // Steering position filter
+        if (filterDto.getSteeringPosition() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.equal(root.get("steeringPosition"), filterDto.getSteeringPosition()));
+        }
+
+        // Seats filters
+        if (filterDto.getSeatsFrom() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.greaterThanOrEqualTo(root.get("seatsCount"), filterDto.getSeatsFrom()));
+        }
+        if (filterDto.getSeatsTo() != null) {
+            spec = spec.and((root, query, criteriaBuilder) ->
+                    criteriaBuilder.lessThanOrEqualTo(root.get("seatsCount"), filterDto.getSeatsTo()));
+        }
+
+        return spec;
+    }
 }
